--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script
+      charset="UTF-8"
+      id="LA_COLLECT"
+      src="//sdk.51.la/js-sdk-pro.min.js"
+    ></script>
+    <script>
+      LA && LA.init({ id: '3JhE26c61qJml9Yv', ck: '3JhE26c61qJml9Yv' })
+    </script>
   </body>
 </html>
