--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.svg" />
+    <link
+      rel="icon"
+      href="https://gcore.jsdelivr.net/gh/xjh22222228/public@gh-pages/beautiful-window/logo.svg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Create your beautiful window online" />
     <meta name="keywords" content="Create your beautiful window online" />
